# Java-Flow-Analyzer

./: Cargo.toml  README.md
src/: cfg.rs  cg.rs  config.rs  edges.rs  flow_solver.rs  main.rs  program.rs  project.rs  syntax_tree.rs
src/fixtures/exampleProject/: config.toml  test.java
