[package]
name = "rustparse"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = "0.19"
tree-sitter-graph = "0.5"
tree-sitter-java = "0.19"
crepe = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
docopt = "1"
walkdir = "2"
regex = "1"
toml = "0.5.9"

[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
cc="*"